# null

./: CMakeLists.txt  main.cpp  multi-projects.code-workspace
intersedes/: CMakeLists.txt  main.cpp
intersedes/include/: Basketbolista.h  Deportista.h  Futbolista.h
intersedes/src/: Basketbolista.cpp  Deportista.cpp  Futbolista.cpp
practica/: CMakeLists.txt  main.cpp
proyecto/: CMakeLists.txt  main.cpp  palabras.txt
proyecto/include/: Ahorcado.h  Juego.h
proyecto/src/: Ahorcado.cpp
punteros/: CMakeLists.txt  main.cpp
punteros/include/: Cuenta.h  Persona.h
punteros/src/: Cuenta.cpp  Persona.cpp
